--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,13 +22,13 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
-          key: maven-${{ runner.os }}
+          key: maven
       - name: Set up Maven Credentials
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-          cache: maven-${{ runner.os }}
+          cache: maven
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
