--- a/jasypt-maven-plugin/pom.xml
+++ b/jasypt-maven-plugin/pom.xml
@@ -13,7 +13,8 @@
     <packaging>maven-plugin</packaging>
 
     <properties>
-        <maven.api.version>2.2.1</maven.api.version>
+        <maven.api.version>3.8.6</maven.api.version>
+        <maven.project.version>2.2.1</maven.project.version>
         <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
         <maven-plugin-plugin.version>3.7.0</maven-plugin-plugin.version>
     </properties>
@@ -31,6 +32,7 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
+            <scope>provided</scope>
             <version>${maven.api.version}</version>
         </dependency>
         <dependency>
@@ -40,7 +42,7 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
-            <version>${maven.api.version}</version>
+            <version>${maven.project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
